chore: 폴더 구조 변경

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         <div class="relative mt-6">
             <div class="relative w-full mx-w-4xl overflow-hidden rounded-lg shadow-lg">
                 <div class="flex transition-transform duration-500 ease-in-out" id="carousel">
-                    <img src="img/pomo_pre_1.png" alt="Slide 1" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_2.png" alt="Slide 2" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_3.png" alt="Slide 3" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_4.png" alt="Slide 3" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_5.png" alt="Slide 3" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_6.png" alt="Slide 3" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_7.png" alt="Slide 3" class="w-full flex-shrink-0">
-                    <img src="img/pomo_pre_8.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_1.png" alt="Slide 1" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_2.png" alt="Slide 2" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_3.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_4.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_5.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_6.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_7.png" alt="Slide 3" class="w-full flex-shrink-0">
+                    <img src="landing/img/pomo_pre_8.png" alt="Slide 3" class="w-full flex-shrink-0">
                 </div>
                 
                 <!-- Prev Button -->
